--- a/o_meni.html
+++ b/o_meni.html
@@ -14,7 +14,7 @@
     <a href="https://www.youtube.com/watch?v=U7wqUmxqhRg"> Moj hobi</a>
     <nav>
         <ul>
-            <li><a href="../index.html">početna stranica</a></li>
+            <li><a href="index.html">početna stranica</a></li>
             <li><a href="../vjezbe.html">vjezbe</a></li>
             <li><a href="../video.html">video</a></li>
         </ul>
